launch/test/syntax/testingCodes/Error/SYN_missingMainError.cpm
//Finished
estrut myStruct {
    int a;
    bul b;

    myStruct(int a, bul b) {
        dis.a = a;
        dis.b = b;
    }

}

func function(int n, bul b, bul array[], myStruct str, int& pos) : bul {
    bul result;
    if ((n == 0) and b) {
        result = array[pos];
    }
    else {
        pos = str.a;
        result = array[n];
    }
    return result;
}

//ERROR: missing main function